Add Google Site Verification meta tag for Search Console
Added Google site verification meta tag for SEO.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Free online Leslie matrix eigenvalue calculator. Compute dominant eigenvalue (lambda) and eigenvector for population models with power iteration. No installs, instant results.">
   <meta name="keywords" content="Leslie matrix,eigenvalue calculator,eigenvector,population model,dominant eigenvalue,power iteration,age-structured matrix,linear algebra,demography,life table,projection matrix">
   <meta name="author" content="Dulina Pathirana">
+  <meta name="google-site-verification" content="JPSGESOn6ejBKEXOWFcdbXAmti1vWEg5h2YJHIlWn-U">
   <link rel="canonical" href="https://dulinaPathirana.github.io/evcal/">
   <link rel="sitemap" type="application/xml" href="/sitemap.xml">
   <!-- Open Graph -->
